# Fade-App

./: .gitignore  ARCHITECTURE.md  AUTOMATED-TESTING.md  CHANGELOG.md  CI-FAIL-LADDER.md  CLAUDE.md  CONDUCTOR-LOG.md  CONTRIBUTING.md  Fade-icons.af  INVESTIGATION-LOG.md  KNOWN-BUG-CLASSES.md  OBSERVER-STATE.md  README.md  SESSION-STATUS.md  TODO.md  libre.manifest.json  package-lock.json  package.json  playwright-ct.config.ts  tsconfig.json  vitest.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  cleanup-releases.yml  diag-report.yml  release.yml
audits/: 01-static-analysis.md  02-concerns.md  03-adversarial.md  04-attack-plan.md  RETROSPECTIVE.md
codex/: README.md
codex/matrix/: mission-matrix.csv
codex/notes/: MP3-MISSION-SAMPLE.md  PROMPT-MISSION-CHECKLIST.md  PROMPT-MISSION-TEMPLATE.md
codex/plans/: CODEX-ONLY-UI-TESTING-PLAN.md  CODEX-TESTING-SYSTEM-V1.md  MP4-PILOT-MISSIONS.md
codex/reports/: UI-VERIFICATION-REPORT-TEMPLATE.md  matrix-run-20260423-124926.md  matrix-run-latest.md  mission-a-20260423-114108.md  mission-a-20260423-114156.md  mission-a-20260423-123832.md  (+20 more)
crash-reporter/: README.md  worker.js  wrangler.toml
docs/: ARCHITECTURE.md  CI-FAIL-LADDER.md  CODEX.md  FORMAT-CONTROLS.md  INSTALL.md  INVESTIGATION-LOG.md  KNOWN-BUG-CLASSES.md  OBSERVER-STATE.md  RELEASE.md  SESSION-STATUS.md  SPECS.md  TODO.md
playwright/: index.ts
scripts/: blender_convert.py  build-release.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fs_commands.rs  lib.rs  presets.rs  theme.rs
src-tauri/src/args/: audio.rs  image.rs  mod.rs  model.rs  model_blender.rs  video.rs
src-tauri/src/convert/: archive.rs  audio.rs  data.rs  document.rs  ebook.rs  email.rs  font.rs  image.rs  mod.rs  model.rs  model_blender.rs  notebook.rs  progress.rs  subtitle.rs  timeline.rs  tracker.rs  video.rs
src-tauri/src/operations/: ai_tools.rs  audio_filters.rs  audio_offset.rs  chroma_key.rs  conform.rs  cut.rs  dvd_author.rs  dvd_rip.rs  extract.rs  frame_ops.rs  loop_op.rs  merge.rs  metadata_strip.rs  mod.rs  rate_limiter.rs  remove_audio.rs  remove_video.rs  replace_audio.rs  rewrap.rs  silence_remove.rs  split.rs  subtitle_ops.rs  video_filters.rs  video_inserts.rs
src-tauri/src/operations/analysis/: audio_norm.rs  black_detect.rs  cut_detect.rs  framemd5.rs  loudness.rs  mod.rs  vmaf.rs
src-tauri/src/operations/subtitling/: diff.rs  lint.rs  mod.rs  probe.rs
src-tauri/src/preview/: image_quality.rs  mod.rs  video_diff.rs
src-tauri/src/probe/: file_info.rs  filmstrip.rs  mod.rs  spectrogram.rs  waveform.rs
src-tauri/tests/: conversions.rs  extra_sweep.rs  full_sweep.rs  matrix.rs  refactored_archive_sweep.rs  refactored_av_sweep.rs  refactored_data_tracker_sweep.rs  refactored_model_sweep.rs  refactored_pure_sweep.rs  refactored_shellout_sweep.rs
tasks/: TASK-10-tempfile-symlink-hardening.md  TASK-11-bindable-defaults-audit.md  TASK-12-image-stderr-drain-thread.md  TASK-14-renderer-temp-sandbox.md  TASK-2-convert-file-path-validation.md  TASK-2-pure-rust-modules.md  TASK-24-image-full-sweep-run.md  TASK-25-image-failure-triage.md  TASK-26-image-validation-closure.md  TASK-28-blender-risks-closure.md  TASK-29-blender-path-unit-tests.md  TASK-4-data-and-tracker.md  TASK-5-model-modules.md  TASK-5a-low-risk-extractions.md  TASK-5b-queue-manager.md  TASK-5c-operations-split.md  TASK-6-av-modules.md  TASK-6-mutex-cleanup.md  TASK-7-archive-module.md  TASK-7-duckdb-sql-hardening.md
(+134 files in other folders)
