[workspace]
members = ["."]
resolver = "2"

[workspace.lints.clippy]
all                  = { level = "warn", priority = -1 }
unwrap_used          = "warn"
await_holding_lock   = "deny"
needless_collect     = "warn"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[package]
name = "fade"
version = "0.1.0"
description = "Fade — LibreWin media converter"
authors = ["LibreWin"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "fade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = [] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
librewin-common = { git = "https://github.com/eldo9000/Libre-Apps.git", rev = "d55e89df876e02b572b0740556e16dbcbc7c1252" }
uuid            = { version = "1", features = ["v4"] }
