[workspace]
members = ["."]
resolver = "2"

[workspace.lints.clippy]
all                  = { level = "warn", priority = -1 }
unwrap_used          = "warn"
await_holding_lock   = "deny"
needless_collect     = "warn"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[package]
name = "fade"
version = "0.6.2"
description = "Fade — LibreWin media converter"
authors = ["LibreWin"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "fade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
librewin-common = { git = "https://github.com/eldo9000/Libre-Apps.git", tag = "v0.1.3" }
uuid            = { version = "1", features = ["v4"] }
csv             = "1"
serde_yaml_ng   = "0.10"
toml            = "0.8"
quick-xml       = { version = "0.36", features = ["serialize"] }
pulldown-cmark  = "0.12"
base64          = "0.22"
# SQLite reader for data-nerd lane (sqlite → csv/json/tsv/xml). `bundled`
# links a vendored SQLite so we don't depend on the system library.
rusqlite        = { version = "0.32", features = ["bundled"] }
